src/vm/snapshots/tvm__vm__tests__add_f64.snap
---
source: src/vm/tests.rs
expression: "run!(r#\"\n        10.5 + 20.5\n    \"#)"
---
## Module

function "main" {
  registers: 2 (0 params)
  literals: [
    F64(10.5)
    F64(20.5)
  ]
  bytecode: (4 ops) [
    lit [0], r0         // 10.5 + 20.5
    lit [1], r1         // 
    add.f64 r0, r1, r0  // 
    ret                 //   
  ]
}


## Output

F64(31.0)

## Events

lit [0], r0              [_, _] -> [10.5f, _]
lit [1], r1              [10.5f, _] -> [10.5f, 20.5f]
add.f64 r0, r1, r0       [10.5f, 20.5f] -> [31f, 20.5f]
ret                      [31f, 20.5f]

