src/vm/snapshots/tvm__vm__tests__arithmetic_f64.snap
---
source: src/vm/tests.rs
expression: "run!(r#\"\n        1.23 + 3.21 * 6.12 - 3.0 / 1.5\n    \"#)"
---
## Module

function "main" {
  registers: 3 (0 params)
  literals: [
    F64(1.23)
    F64(3.21)
    F64(6.12)
    F64(3.0)
    F64(1.5)
  ]
  bytecode: (10 ops) [
    lit [0], r0           // 1.23 + 3.21 * 6.12 - 3.0 / 1.5
    lit [1], r1           // 
    lit [2], r2           // 
    mul <f64> r1, r2, r1  // 
    add <f64> r0, r1, r0  // 
    lit [3], r1           // 
    lit [4], r2           // 
    div <f64> r1, r2, r1  // 
    sub <f64> r0, r1, r0  // 
    ret                   //   
  ]
}


## Output

F64(18.8752)

## Events

lit [0], r0              [_, _, _] -> [1.23f, _, _]
lit [1], r1              [1.23f, _, _] -> [1.23f, 3.21f, _]
lit [2], r2              [1.23f, 3.21f, _] -> [1.23f, 3.21f, 6.12f]
mul <f64> r1, r2, r1     [1.23f, 3.21f, 6.12f] -> [1.23f, 19.6452f, 6.12f]
add <f64> r0, r1, r0     [1.23f, 19.6452f, 6.12f] -> [20.8752f, 19.6452f, 6.12f]
lit [3], r1              [20.8752f, 19.6452f, 6.12f] -> [20.8752f, 3f, 6.12f]
lit [4], r2              [20.8752f, 3f, 6.12f] -> [20.8752f, 3f, 1.5f]
div <f64> r1, r2, r1     [20.8752f, 3f, 1.5f] -> [20.8752f, 2f, 1.5f]
sub <f64> r0, r1, r0     [20.8752f, 2f, 1.5f] -> [18.8752f, 2f, 1.5f]
ret                      [18.8752f, 2f, 1.5f]

