src/vm/snapshots/tvm__vm__tests__arithmetic_i64.snap
---
source: src/vm/tests.rs
expression: "run!(r#\"\n        // 10 + (10 * 20) - (10 / 2)\n        // 10 + 200 - (10 / 2)\n        // 210 - (10 / 2)\n        // 210 - 5\n        // 205\n\n        10 + 10 * 20 - 10 / 2\n    \"#)"
---
## Module

function "main" {
  registers: 3 (0 params)
  literals: []
  bytecode: (10 ops) [
    smi 10, r0            // 10 + 10 * 20 - 10 / 2
    smi 10, r1            // 
    smi 20, r2            // 
    mul <i64> r1, r2, r1  // 
    add <i64> r0, r1, r0  // 
    smi 10, r1            // 
    smi 2, r2             // 
    div <i64> r1, r2, r1  // 
    sub <i64> r0, r1, r0  // 
    ret                   //   
  ]
}


## Output

I64(205)

## Events

smi 10, r0               [_, _, _] -> [10i, _, _]
smi 10, r1               [10i, _, _] -> [10i, 10i, _]
smi 20, r2               [10i, 10i, _] -> [10i, 10i, 20i]
mul <i64> r1, r2, r1     [10i, 10i, 20i] -> [10i, 200i, 20i]
add <i64> r0, r1, r0     [10i, 200i, 20i] -> [210i, 200i, 20i]
smi 10, r1               [210i, 200i, 20i] -> [210i, 10i, 20i]
smi 2, r2                [210i, 10i, 20i] -> [210i, 10i, 2i]
div <i64> r1, r2, r1     [210i, 10i, 2i] -> [210i, 5i, 2i]
sub <i64> r0, r1, r0     [210i, 5i, 2i] -> [205i, 5i, 2i]
ret                      [205i, 5i, 2i]

