src/vm/snapshots/tvm__vm__tests__bool_not.snap
---
source: src/vm/tests.rs
expression: "run!(r#\"\n        let v = true;\n        !v\n    \"#)"
---
## Module

function "main" {
  registers: 2 (0 params)
  literals: []
  bytecode: (3 ops) [
    bool true, r1  // let v = true;
    not r1, r0     // !v
    ret            //   
  ]
}


## Output

Bool(false)

## Events

bool true, r1            [_, _] -> [_, true]
not r1, r0               [_, true] -> [false, true]
ret                      [false, true]

