src/vm/snapshots/tvm__vm__tests__f64.snap
---
source: src/vm/tests.rs
expression: "run!(r#\"\n        1.23\n    \"#)"
---
## Module

function "main" {
  registers: 1 (0 params)
  literals: [
    F64(1.23)
  ]
  bytecode: (2 ops) [
    lit [0], r0  // 1.23
    ret          //   
  ]
}


## Output

F64(1.23)

## Events

lit [0], r0              [_] -> [1.23f]
ret                      [1.23f]

