src/vm/snapshots/tvm__vm__tests__fibonacci.snap
---
source: src/vm/tests.rs
expression: "run!(r#\"\n        fn fib(n: int) -> int {\n            if n < 2 { n }\n            else { fib(n - 1) + fib(n - 2) }\n        }\n\n        fib(3) + fib(7)\n    \"#)"
---
## Module

function "main" {
  registers: 3 (0 params)
  literals: []
  bytecode: (6 ops) [
    smi 3, r1           // fib(3) + fib(7)
    call f0, r0         // 
    smi 7, r2           // 
    call f0, r1         // 
    add.i64 r0, r1, r0  // 
    ret                 //   
  ]
}

function "fib" #0 {
  registers: 5 (1 params)
  literals: []
  bytecode: (14 ops) [
    smi 2, r2           // if n < 2 { n }
    clt.i64 r1, r2, r0  // 
    jmpf r0, +3         // 
    mov r1, r0          // 
    jmp +9              // 
    smi 1, r4           // else { fib(n - 1) + fib(n - 2) }
    sub.i64 r1, r4, r3  // 
    call f0, r2         // 
    mov r2, r0          // 
    smi 2, r4           // 
    sub.i64 r1, r4, r3  // 
    call f0, r2         // 
    add.i64 r0, r2, r0  // 
    ret                 //   
  ]
}


## Output

I64(15)


