src/vm/snapshots/tvm__vm__tests__minus_f64.snap
---
source: src/vm/tests.rs
expression: "emit! (r#\"\n        let v = 1.0;\n        -v\n    \"#)"
---
F64(-1.0)
