src/vm/snapshots/tvm__vm__tests__minus_i64.snap
---
source: src/vm/tests.rs
expression: "emit! (r#\"\n        let v = 1;\n        -v\n    \"#)"
---
I64(-1)
